# worldbuilder_ai

./: .gitignore  LICENSE  README.md  pyproject.toml  texts.txt
logs/: 2024-01-24-11-33-02.txt  2024-01-24-11-34-11.txt  2024-01-24-16-07-33.txt  2024-01-24-16-09-07.txt  2024-01-24-16-10-28.txt  2024-01-24-16-29-53.txt  2024-01-24-16-37-30.txt  2024-01-24-16-42-05.txt  2024-01-24-16-44-17.txt  2024-01-24-17-25-06.txt  2024-01-24-17-27-08.txt  2024-01-24-17-35-35.txt  2024-01-24-17-35-57.txt  2024-01-24-18-22-24.txt  2024-01-24-18-23-34.txt  2024-01-24-18-26-46.txt  2024-01-24-18-31-45.txt  2024-01-24-18-57-50.txt  2024-01-24-19-03-19.txt  2024-01-24-19-03-52.txt  2024-01-24-19-04-30.txt  2024-01-24-19-06-43.txt  2024-01-24-19-08-52.txt
worldbuilder_ai/: __main__.py
worldbuilder_ai/models/: __init__.py
worldbulder_ai/: __main__.py
